# FreeRDS-shadow

./: CMakeLists.txt  README.md
cmake/: ConfigOptions.cmake  FreeRDSCompilerFlags.cmake
src/: CMakeLists.txt  shadow_main.c  shadow_x11.c  shadow_x11.h
